--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,17 +21,52 @@ jobs:
       - checkout
       - run: echo "this is the test job"
 
+  compile:
+    parallelism: 2
+    docker:
+      - image: gcc:8.2
+    steps:
+      - checkout
+      #split all c files based on the index ID we're running on, pass subset to gcc compile
+      - run: circleci tests glob "**/*.c" | circleci tests split --split-by=filesize | xargs gcc -c 
+      # move compiled files to specific folder and persist to workspace
+      - run: mkdir output && mv *.o output
+      - persist_to_workspace:
+          root: output
+          paths:
+            - "*.o"
 
+  link:
+    docker:
+      - image: gcc:8.2
+    steps:
+      # instead of checking out, restore workspace (will merge all parallel containers from previous job)
+      - attach_workspace:
+          at: output
+      - run: ls -la output
+      - run: mv output/* .
+      # link the compiled files into an executable
+      - run: gcc -o program *.o
+      # confirm program exists and is executable
+      - run: ls -la
+      - run: ./program
+      # persist as artifact
+      - store_artifacts:
+          path: program
+
+          
 # Orchestrate or schedule a set of jobs
 workflows:
-  # Name the workflow "welcome"
-  welcome:
-    # Run the welcome/run job in its own container
-    jobs:
-      - welcome/run
-
   
   build_and_test:
     jobs:
       - build
       - test
+
+  compile_and_link:
+    jobs:
+        -compile
+        -link:
+            requires:
+                -compile
+        
