--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,32 +27,8 @@ jobs:
       - image: gcc:8.2
     steps:
       - checkout
-      #split all c files based on the index ID we're running on, pass subset to gcc compile
-      - run: circleci tests glob "*.c" | circleci tests split --split-by=filesize | xargs gcc -c -lm
-      # move compiled files to specific folder and persist to workspace
-      - run: mkdir output && mv *.o output
-      - persist_to_workspace:
-          root: output
-          paths:
-            - "*.o"
+      - run: gcc Tests.c -o Tests -lm
 
-  link:
-    docker:
-      - image: gcc:8.2
-    steps:
-      # instead of checking out, restore workspace (will merge all parallel containers from previous job)
-      - attach_workspace:
-          at: output
-      - run: ls -la output
-      - run: mv output/* .
-      # link the compiled files into an executable
-      - run: gcc -o program *.o
-      # confirm program exists and is executable
-      - run: ls -la
-      - run: ./program
-      # persist as artifact
-      - store_artifacts:
-          path: program
 
           
 # Orchestrate or schedule a set of jobs
@@ -66,7 +42,4 @@ workflows:
   compile_and_link:
     jobs:
       - compile
-      - link:
-          requires: 
-            - compile
-        
+
