--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,19 +8,6 @@ orbs:
 
 # Define the jobs we want to run for this project
 jobs:
-  build:
-    docker:
-      - image: gcc:8.2
-    steps:
-      - checkout
-      - run: echo "this is the build job"
-  test:
-    docker:
-      - image: gcc:8.2
-    steps:
-      - checkout
-      - run: echo "this is the test job"
-
   compile:
     parallelism: 2
     docker:
@@ -29,17 +16,23 @@ jobs:
       - checkout
       - run: gcc Tests.c -o Tests -lm
 
+  test:
+    parallelism: 2
+    docker:
+      - image: gcc:8.2
+    steps:
+      - checkout
+      - run: ./Test
 
           
 # Orchestrate or schedule a set of jobs
 workflows:
-  
-  build_and_test:
-    jobs:
-      - build
-      - test
 
-  compile_and_link:
+  compile_and_test:
     jobs:
       - compile
+      - test:
+          requires: 
+            - compile
+      
 
