--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,7 +41,7 @@ jobs:
       - attach_workspace:
           at: /build/testing
           
-      - run: ls
+      - run: ./testing/Tests
 
           
 # Orchestrate or schedule a set of jobs
